<resources>
    <string name="app_name">Book Library</string>
    <string name="login_title">Book Library</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">LOGIN</string>
    <string name="login_forgotpw">Forgot password?</string>
    <string name="login_other">or sign in with</string>
    <string name="login_ok">Login Successful</string>
    <string name="login_fail">Login Failed</string>
    <string name="home_select">Select List</string>
    <string name="home_book">Book</string>
    <string name="home_type">Type</string>
    <string name="home_logout">Logout</string>
    <string name="des_name">Name: </string>
    <string name="des_type">Type:  </string>
    <string name="des_id">ID: </string>
    <string name="des_author">Author: </string>
    <string name="des_amount">Amount: </string>
    <string name="item_type">type </string>
    <string name="about_name">Name: </string>
    <string name="about_id">ID: </string>
    <string name="about_phone">Phone: </string>
    <string name="about_class">Class: </string>
    <string name="menu_about">About </string>
    <string name="menu_exit">Exit </string>
    <string name="menu_book">List Book </string>
    <string name="menu_type">List Type </string>
    <string name="add_type">Add New Type</string>
    <string name="add_book">Add New Book</string>
    <string name="button_Add">Add</string>
    <string name="button_Select">Select Photo</string>
    <string name="button_Take">Take Photo</string>
    <string name="button_Save">Save</string>
    <string name="button_Cancel">Cancel</string>
    <string name="about_info">Information</string>
    <string name="map_key" translatable="false">AIzaSyAKcl1gxfwL3gwu2Wv3ble2x_S9gC7ZtdQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="university">Saigon Technology University</string>


</resources>