<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">



    <RelativeLayout
        android:id="@+id/relative_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scode_profile"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_info"
                android:textSize="28dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cao Chiến Hào"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_id"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DH51804107"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_class"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D18_TH11"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="haocaochien@gmail.com"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_phone"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/aboutPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0905224482"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutPhone"
                tools:context=".activities.AboutActivity" />


        </LinearLayout>




    </RelativeLayout>


</LinearLayout>